--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <h1>My first application!</h1>
     <p>Welcome to <i>Learning JavaScript, 3rd edition</i>.</p>
 
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
     <script src="main.js"></script>
   </body>
 </html>
