--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <canvas id="mainCanvas"></canvas>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-core.js"></script>
     <script src="/Users/osvaldo.lievano/JavaScript/JavaCode/main.js"></script>
   </body>
 </html>
